--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reservation_room",
+  "homepage": "https://bbrvi2008.github.io/reservation_room",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,9 +14,13 @@
     "redux": "^3.7.2"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
